--- a/task-manager-app/vercel.json
+++ b/task-manager-app/vercel.json
@@ -1,9 +1,8 @@
 {
   "version": 2,
-  "name": "task-manager-app",
   "builds": [
     {
-      "src": "vite.config.js",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
@@ -12,9 +11,11 @@
   ],
   "routes": [
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ],
-  "buildCommand": "npm run build"
+  ]
 }
